Add attributes and product types
